--- a/base/quartus/base.qsf
+++ b/base/quartus/base.qsf
@@ -57,3 +57,5 @@ set_location_assignment PIN_AH16 -to reset_reset_n
 set_location_assignment PIN_V11 -to clk_clk
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_clk
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to reset_reset_n
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name NUM_PARALLEL_PROCESSORS 4
